# yourise.ai

./: .gitignore  README.md  package.json  requirements.txt  run_app_back.py
backend/: checkofwork_pars.py  example.py  llm_example.py  manage.py  report_0657acc4-5321-4ed2-bb17-dd2d5830ed75.docx  report_0657acc4-5321-4ed2-bb17-dd2d5830ed75.json  report_09bc971a-7537-4f4c-aba8-ea715fbfc9eb.docx  report_09bc971a-7537-4f4c-aba8-ea715fbfc9eb.json  report_24581013-3284-429b-be75-07ea02022234.docx  report_24581013-3284-429b-be75-07ea02022234.json  report_2b94d58a-df6d-43ca-8249-745f908d00b1.docx  report_2b94d58a-df6d-43ca-8249-745f908d00b1.json  report_3f7909ef-7c71-4502-8ec3-aed2c88077dd.docx  report_3f7909ef-7c71-4502-8ec3-aed2c88077dd.json  report_483890e5-529f-4076-a013-6857d8c250e8.docx  report_483890e5-529f-4076-a013-6857d8c250e8.json  report_48d1fabc-ea68-49f3-96f9-e399cd8b05a7.docx  report_48d1fabc-ea68-49f3-96f9-e399cd8b05a7.json  report_4a053e45-5a4d-42b7-b0d8-1df7b44eb310.docx  report_4a053e45-5a4d-42b7-b0d8-1df7b44eb310.json  report_5a7ba7e2-25ce-423e-a4c1-227d8e853b08.docx  report_5a7ba7e2-25ce-423e-a4c1-227d8e853b08.json  (+36 more)
backend/llm_validator/: README.md  __init__.py  cli.py  clients.py  config.py  core.py  db.py  main.py  prompts.py  pyproject.toml  report.py  requirements.txt  schemas.py  setup.py
backend/llm_validator/aggregator/: __init__.py  risk_aggregator.py
backend/llm_validator/aggregators/: __init__.py  risk_aggregator.py
backend/llm_validator/clients/: __init__.py  deepseek_client.py
backend/llm_validator/db/: __init__.py  validator_repository.py
backend/llm_validator/parsers/: __init__.py  response_parser.py
backend/llm_validator/prompts/: __init__.py  added_prompt.py  base_prompt.py  deleted_prompt.py  modified_prompt.py
backend/llm_validator/response_parser/: __init__.py  response_parser.py
backend/llm_validator/test/: __init__.py  test_parsing.py  test_prompts.py
backend/llm_validator/tests/: __init__.py  test_parsing.py  test_prompts.py
(+69 files in other folders)
